# Competence-Hub

./: .gitignore
backend/: app.db  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
study_process_service/: app.db  competence_hub.db  main.py  pyproject.toml
study_process_service/app/: main.py
study_process_service/app/api/: crud.py  deps.py
study_process_service/app/api/routes/: __init__.py  auth.py  disciplines.py  knowledge_element_relations.py  knowledge_elements.py  teachers.py  theme_elements.py  themes.py  topic_dependencies.py  topic_knowledge_elements.py  topics.py
study_process_service/app/core/: __init__.py  bootstrap.py  config.py  db.py  security.py
study_process_service/app/frontend/: app.js  index.html  styles.css
study_process_service/app/models/: __init__.py  bindings.py  discipline.py  disciplines.py  enums.py  groups.py  knowledge_graph.py  students.py  teacher_theme_selection.py  theme.py  theme_element.py  trajectories.py  user.py
study_process_service/app/schemas/: __init__.py  auth.py  discipline.py  disciplines.py  knowledge_element_relations.py  knowledge_elements.py  teacher.py  theme.py  theme_element.py  topic_dependencies.py  topic_knowledge_elements.py  topics.py
study_process_service/frontend/: package.json  tsconfig.app.tsbuildinfo
study_process_service/frontend/src/: App.tsx  api.ts  graphScene.ts  styles.css  types.ts
study_process_service/frontend/src/components/: GraphEditor.tsx  GraphNode.tsx
study_process_service/test/: seed_test_graph_db.py
(+85 files in other folders)
